investors page created

--- a/public/index.html
+++ b/public/index.html
@@ -169,7 +169,7 @@
 
 
 
-    <section class="container"  style="height: 600px;">
+    <section class="container"  style="height: 550px;">
       <div class="row ">
         <div class="col-md-6  d-flex justify-content-center"> <img class="img-fluid" style="border-radius:25px;"
             src="./static/img/home/graph/gp1-md.png " /> </div>
@@ -202,7 +202,7 @@
 
 <!-- old code -->
 
-<div class="container" style="height: 600px;">
+<div class="container" style="height: 550px;">
     <!-- yt-6 -->
   <div class="row  text-start overflow-hidden">
     <div class="col-md-6  d-flex justify-content-center order-sm-2">
@@ -230,7 +230,7 @@
 
 <!-- new code -->
    
-    <!-- <section class="container  mt-3" style="height: 600px;">
+    <!-- <section class="container  mt-3" style="height: 550px;">
       <div class="row ">
         <article class="col-md-6 d-flex justify-content-center order-xs-1">
           <article class="sell-4-more-container">
@@ -259,7 +259,7 @@
 
 
 
-<section class="container mt-3"  style="height: 600px;">
+<section class="container mt-3"  style="height: 550px;">
   <div class="row ">
     <div class="col-md-6  d-flex justify-content-center"> <img class="img-fluid" style="border-radius:25px;"
         src="./static/img/home/old-coffee-md.jpg" /> </div>
@@ -460,20 +460,20 @@
   <footer class="container-full text-white" style="background-image: url('../static/img/woods/wood1.jpeg');">
     <div class="container ">
       <article class="d-flex flex-wrap justify-content-between align-items-center py-3">
-        <!-- <p class="col-md-4 mb-0  text-white">&copy; 2024 Company, Inc 1</p> -->
+        <!-- <p class="col-md-4 mb-0  text-white">&copy; 2024  1</p> -->
         <img width="75px" src="../static/logo/l1.webp" alt="">
 
         <ul class="nav col text-white justify-content-end">
-          <li class="nav-item r-5"><a href="#" class="nav-link px-2  text-white">About us</a></li>
-          <li class="nav-item r-5"><a href="#" class="nav-link px-2  text-white">Careers</a></li>
-          <li class="nav-item r-5"><a href="#" class="nav-link px-2  text-white">Investors</a></li>
+          <li class="nav-item r-5"><a href="/about" class="nav-link px-2  text-white">About us</a></li>
+          <li class="nav-item r-5"><a href="/join-us" class="nav-link px-2  text-white">Careers</a></li>
+          <li class="nav-item r-5"><a href="/investors" class="nav-link px-2  text-white">Investors</a></li>
 
         </ul>
       </article>
 
 
       <article class="d-flex flex-wrap justify-content-between align-items-center py-3">
-        <p class="col-md-4 mb-0 ">&copy; 2024 Company, Inc</p>
+        <p class="col-md-4 mb-0 ">&copy; 2024 </p>
 
         <a href="/"
           class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
