--- a/public/vp-of-land/index.html
+++ b/public/vp-of-land/index.html
@@ -365,7 +365,7 @@
           days.</p>
         <!-- py-4 -->
       <div class="d-grid gap-2 d-sm-flex justify-content-sm-start">
-        <a class="viewOpening button wooden-a mt-4" style="text-transform: capitalize; text-decoration: none;" href="/free-discovery-call/" > VIEW OPENINGS </a>
+        <a class="viewOpening button wooden-a mt-4" style="text-transform: capitalize; text-decoration: none;" href="/join-us/" > VIEW OPENINGS </a>
       </div>
     </div>
   </div>
@@ -379,7 +379,7 @@
 <footer class="container-full text-white" style="background-image: url('../static/img/woods/wood1.jpeg'); ">
   <div class="container ">
     <article class="d-flex flex-wrap justify-content-between align-items-center py-3">
-      <!-- <p class="col-md-4 mb-0  text-white">&copy; 2024 Company, Inc 1</p> -->
+      <!-- <p class="col-md-4 mb-0  text-white">&copy; 2024  1</p> -->
         <img width="75px"  src="../static/logo/l1.webp" alt="">
   
       <ul class="nav col text-white justify-content-end">
@@ -392,7 +392,7 @@
 
 
     <article class="d-flex flex-wrap justify-content-between align-items-center py-3">
-      <p class="col-md-4 mb-0 ">&copy; 2024 Company, Inc</p>
+      <p class="col-md-4 mb-0 ">&copy; 2024 </p>
   
       <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
         <!-- <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"/></svg> -->
