--- a/public/free-discovery-call/index.html
+++ b/public/free-discovery-call/index.html
@@ -234,6 +234,18 @@
 
 
 
+
+
+  <!-- <div class="px-4 py-5 text-center" style="min-height: 500px; background-image: url('../../static/img/_New/wom-pho-c.jpg'); background-position: 21%; background-position:center; background-size: cover">
+  </div> -->
+
+
+  <section class="container-full">
+    <img  src="../static/img/about/sm.png" class="img-fluid d-lg-none" alt="...">
+    <img src="../static/img/about/md.png" class="img-fluid d-none d-lg-block" alt="...">
+  </section>
+
+
 <!-- subscribe  -->
 <section class="container-full" style="background-color: white;">
   <section class="container">
@@ -273,17 +285,6 @@
 
 
 
-  <!-- <div class="px-4 py-5 text-center" style="min-height: 500px; background-image: url('../../static/img/_New/wom-pho-c.jpg'); background-position: 21%; background-position:center; background-size: cover">
-  </div> -->
-
-
-  <section class="container-full">
-    <img  src="../static/img/about/sm.png" class="img-fluid d-lg-none" alt="...">
-    <img src="../static/img/about/md.png" class="img-fluid d-none d-lg-block" alt="...">
-  </section>
-
-
-
   <!-- <section class="container-full letswork"> -->
     <section class="container-full letswork" style="background-image: url('../../static/img/woods/wood1.jpeg'); ">
 <!-- <div class="container "> -->
@@ -300,7 +301,7 @@
           days.</p>
         <!-- py-4 -->
       <div class="d-grid gap-2 d-sm-flex justify-content-sm-start">
-        <a class="viewOpening button wooden-a mt-4" style="text-transform: capitalize; text-decoration: none;" href="/free-discovery-call/" > VIEW OPENINGS </a>
+        <a class="viewOpening button wooden-a mt-4" style="text-transform: capitalize; text-decoration: none;" href="/join-us/" > VIEW OPENINGS </a>
       </div>
     </div>
   </div>
@@ -314,7 +315,7 @@
 <footer class="container-full text-white" style="background-image: url('../static/img/woods/wood1.jpeg'); ">
   <div class="container ">
     <article class="d-flex flex-wrap justify-content-between align-items-center py-3">
-      <!-- <p class="col-md-4 mb-0  text-white">&copy; 2024 Company, Inc 1</p> -->
+      <!-- <p class="col-md-4 mb-0  text-white">&copy; 2024  1</p> -->
         <img width="75px"  src="../static/logo/l1.webp" alt="">
   
       <ul class="nav col text-white justify-content-end">
@@ -327,7 +328,7 @@
 
 
     <article class="d-flex flex-wrap justify-content-between align-items-center py-3">
-      <p class="col-md-4 mb-0 ">&copy; 2024 Company, Inc</p>
+      <p class="col-md-4 mb-0 ">&copy; 2024 </p>
   
       <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
         <!-- <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"/></svg> -->
