--- a/public/free-discovery-call/index.html
+++ b/public/free-discovery-call/index.html
@@ -319,8 +319,8 @@
         <img width="75px"  src="../static/logo/l1.webp" alt="">
   
       <ul class="nav col text-white justify-content-end">
-        <li class="nav-item r-5"><a href="#" class="nav-link px-2  text-white">About us</a></li>
-        <li class="nav-item r-5"><a href="#" class="nav-link px-2  text-white">Careers</a></li>
+        <!-- <li class="nav-item r-5"><a href="#" class="nav-link px-2  text-white">About us</a></li>
+        <li class="nav-item r-5"><a href="#" class="nav-link px-2  text-white">Careers</a></li> -->
         <li class="nav-item r-5"><a href="#" class="nav-link px-2  text-white">Investors</a></li>
         
       </ul>
