--- a/public/index.html
+++ b/public/index.html
@@ -440,7 +440,7 @@
   <section style="background-color: #F7F7F7 " class='container-full'>
     <div class="row text-center">
 
-      <div class="h-100 col-md-6" style="background-color: #F7F7F7;">
+      <div class="h-100 col-md-6" style="background-color: #F7F7F7; padding: 80px;">
         <h1 style="color:black; " class="display-1 text-center byYourSide-text"> By your side every step of the way
         </h1>
       </div>
@@ -464,8 +464,8 @@
         <img width="75px" src="../static/logo/l1.webp" alt="">
 
         <ul class="nav col text-white justify-content-end">
-          <li class="nav-item r-5"><a href="/about" class="nav-link px-2  text-white">About us</a></li>
-          <li class="nav-item r-5"><a href="/join-us" class="nav-link px-2  text-white">Careers</a></li>
+          <!-- <li class="nav-item r-5"><a href="/about" class="nav-link px-2  text-white">About us</a></li> -->
+          <!-- <li class="nav-item r-5"><a href="/join-us" class="nav-link px-2  text-white">Careers</a></li> -->
           <li class="nav-item r-5"><a href="/investors" class="nav-link px-2  text-white">Investors</a></li>
 
         </ul>
@@ -481,9 +481,9 @@
         </a>
 
         <ul class="nav col-md-12 justify-content-end">
-          <li class=" "><a href="#" class="nav-link   text-white">Terms</a></li>
+          <!-- <li class=" "><a href="#" class="nav-link   text-white">Terms</a></li> -->
           <!-- <li class="nav-item"><a href="#" class="nav-link px-2  text-white">|</a></li> -->
-          <li class=""><a href="#" class="nav-link   text-white">Privacy</a></li>
+          <!-- <li class=""><a href="#" class="nav-link   text-white">Privacy</a></li> -->
           <p style="opacity: .4"> Any opinions or views stated on this website are subject to change without notice for
             any reason, and Equity Group reserves the right in its sole discretion, at any time and from time to time,
             to add, modify, or remove any of the information without any notice to you. Equity Group does not undertake,
