--- a/public/join-us/index.html
+++ b/public/join-us/index.html
@@ -412,8 +412,8 @@
         <img width="75px"  src="../static/logo/l1.webp" alt="">
   
       <ul class="nav col text-white justify-content-end">
-        <li class="nav-item r-5"><a href="about" class="nav-link px-2  text-white">About us</a></li>
-        <li class="nav-item r-5"><a href="careers" class="nav-link px-2  text-white">Careers</a></li>
+        <!-- <li class="nav-item r-5"><a href="about" class="nav-link px-2  text-white">About us</a></li>
+        <li class="nav-item r-5"><a href="careers" class="nav-link px-2  text-white">Careers</a></li> -->
         <li class="nav-item r-5"><a href="investors" class="nav-link px-2  text-white">Investors</a></li>
         
       </ul>
