--- a/public/paul/index.html
+++ b/public/paul/index.html
@@ -147,7 +147,7 @@
                       </li>
     
                       <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Contact</a>
+                        <a class="nav-link text-white" href="/contact">Contact</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link text-white" href="/free-discovery-call">Free discovery call</a>    <!--  Jay - make it ghost button -->
@@ -363,15 +363,15 @@
   
 
 
-<footer class="container-full text-white" style="background-image: url('../static/img/woods/burgandy.webp');">
+<footer class="container-full text-white" style="background-image: url('../static/img/woods/wood1.jpeg');">
   <div class="container ">
     <article class="d-flex flex-wrap justify-content-between align-items-center py-3">
       <!-- <p class="col-md-4 mb-0  text-white">&copy; 2024  1</p> -->
         <img width="75px"  src="../static/logo/l1.webp" alt="">
   
       <ul class="nav col text-white justify-content-end">
-        <li class="nav-item r-5"><a href="#" class="nav-link px-2  text-white">About us</a></li>
-        <li class="nav-item r-5"><a href="#" class="nav-link px-2  text-white">Careers</a></li>
+        <!-- <li class="nav-item r-5"><a href="#" class="nav-link px-2  text-white">About us</a></li>
+        <li class="nav-item r-5"><a href="#" class="nav-link px-2  text-white">Careers</a></li> -->
         <li class="nav-item r-5"><a href="#" class="nav-link px-2  text-white">Investors</a></li>
         
       </ul>
