--- a/public/bi6/index.html
+++ b/public/bi6/index.html
@@ -152,7 +152,7 @@
                       </li>
     
                       <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Contact</a>
+                        <a class="nav-link text-white" href="/contact">Contact</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link text-white" href="/free-discovery-call">Free discovery call</a>    <!--  Jay - make it ghost button -->
@@ -250,7 +250,7 @@
   <div class="row py-5">
   <article class="col-md-6" style="margin-bottom:40px">
     <p class="trail"><span class="hr"></span>Growth Trajectory</p>
-    <p class="p-text"> We plan to double the number of home-building projects through internal expansion and acquisitions.</p>
+    <p class="p-text"> We plan to double the number of home-building projects each year through internal expansion and acquisitions.</p>
   </article>
 
   <article class="col-md-6">
@@ -370,10 +370,9 @@
   <!-- <div class="px-4 py-5 text-center" style="min-height: 500px; background-image: url('../../static/img/_New/wom-pho-c.jpg'); background-position: 21%; background-position:center; background-size: cover">
   </div> -->
 
-  <!-- smaller screen -->
-  <img  src="../../static/img/_New/wom-pho-c.jpg" class="img-fluid d-lg-none" alt="...">
-  <!-- large screen  -->
-  <img src="../../static/img/_New/wom-pho-c.jpg" class="img-fluid d-none d-lg-block" alt="...">
+
+  <!-- <img  src="../../static/img/_New/wom-pho-c.jpg" class="img-fluid d-lg-none" alt="...">
+  <img src="../../static/img/_New/wom-pho-c.jpg" class="img-fluid d-none d-lg-block" alt="..."> -->
 
 
 
@@ -411,15 +410,15 @@
   
 
 
-<footer class="container-full text-white" style="background-image: url('../static/img/woods/burgandy.webp');">
+<footer class="container-full text-white" style="background-image: url('../static/img/woods/wood1.jpeg');">
   <div class="container ">
     <article class="d-flex flex-wrap justify-content-between align-items-center py-3">
       <!-- <p class="col-md-4 mb-0  text-white">&copy; 2024  1</p> -->
         <img width="75px"  src="../static/logo/l1.webp" alt="">
   
       <ul class="nav col text-white justify-content-end">
-        <li class="nav-item r-5"><a href="#" class="nav-link px-2  text-white">About us</a></li>
-        <li class="nav-item r-5"><a href="#" class="nav-link px-2  text-white">Careers</a></li>
+        <!-- <li class="nav-item r-5"><a href="#" class="nav-link px-2  text-white">About us</a></li>
+        <li class="nav-item r-5"><a href="#" class="nav-link px-2  text-white">Careers</a></li> -->
         <li class="nav-item r-5"><a href="#" class="nav-link px-2  text-white">Investors</a></li>
         
       </ul>
