left right alignment for second row working fine

--- a/public/paul/index.html
+++ b/public/paul/index.html
@@ -7,7 +7,7 @@
   <link rel="icon" href="../static/logo/eqlogo.png" sizes="32x32" />
   <link rel="icon" href="../static/logo/eqlogo.png" sizes="192x192" />
   <link rel="apple-touch-icon" href="../static/logo/eqlogo.png" />
-    <title>Pauln | Equity Group </title>
+    <title>Paul | Equity Group </title>
 
     <!-- <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/heroes/"> -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
@@ -181,7 +181,7 @@
 
     <section class="container-full" style="min-height: 600px; background-image: url('../static/img/woods/wood1.jpeg'); ">
       <div class="row align-items-md-stretch py-4 " >
-       <div class="col-md-9 ms-auto order-sm-1 ">
+       <div class="col-md-8 ms-auto order-sm-1 ">
          <div style="color: white;" class="h-100 p-5 rounded-3 ">
            <p style="margin-top: 70px;" class="trailw"><span class="hr"></span>EQUITY GROUP</p>
             <h3 style="margin-top: 80px;" class="display-2 ">Paul Foster</h3>
@@ -190,10 +190,10 @@
            </div>
        </div>
 
-       <div class="col-md-3 ms-auto order-sm-2">
+       <div class="col-md-4 ms-auto order-sm-2">
         <div class="h-100 p-5 rounded-3">
             <img  loading="lazy" src="../static/img/profile-images/paulF.jpg"
-                          style="border-radius: 25px; margin-top: 40px;" width="500" height="610"  class="img-fluid lazyload"
+                          style="border-radius: 25px; margin-top: 100px;" width="500" height="610"  class="img-fluid lazyload"
                           alt="Paul Foster" loading="lazy"
                           data-src="../static/img/profile-images/paulF.jpg" />
           </div>
@@ -240,7 +240,7 @@
          </p>
          <br/><br/>
           <h2>Transaction Advisory Group, LLC ( 3/2019 - Present)</h2>
-          <p  class="p-20">Transactions Director, Equity Group</p>
+          <!-- <p  class="p-20">Transactions Director, Equity Group</p> -->
           <p  class="p-20">Provide independent M&A advisory services to businesses and management teams who don’t require or can’t justify hiring and investment banking firm. Primary focus is on structuring and negotiating transactions.</p>   
 
             <li class="p-20"> Advising two private equity firms in evaluating prospective portfolio additions and working with existing portfolio companies in completing additional “Roll-Up” acquisitions. </li>
@@ -271,7 +271,7 @@
             <p class="p-20">Responsible for all facets of BNY’s M&A and divestiture activities (as detailed above) focusing on the Investment/Wealth management, Execution Services (B/D and Clearing) and Corporate Trust businesses.</p>
             <p class="p-20">This required the development and maintenance of constant lines of communications with potential acquirees and their representatives, including attorneys and investment bankers to articulate the Bank's competencies and strategies in order to generate enthusiasm for the potential partnership, while also gaining an understanding of the goals and intentions of the other parties for use in developing negotiating strategies.</p>
 
-            Accomplishments include:
+            <p class="p-20">Accomplishments include:</p>
             <li class="p-20"> 
               Closed over ~100 transactions (of several thousand evaluated and analyzed) including 11 investment and wealth management acquisitions; 15 separate acquisitions of B/Ds and related technology firms which created BNY Securities Group; several securities clearing acquisitions including Pershing, as well as >30 corporate trust roll-up transactions.
             </li>
@@ -306,8 +306,12 @@
     <article class="col-md-4">
       <div class="h-100 p-5 rounded-3 ">
         <ul class="list-unstyled paul-bg">
-          <li class="paul-li nostyle-list"><h3>Expertise Areas</h3></li>
+
+          <p style="" class="trailw"><span class="hr"></span><br/> Expertise</p>
+          <!-- <li class="paul-li nostyle-list"><h3>Expertise </h3></li> -->
          
+          <li class="paul-li nostyle-list" style="visibility: hidden;"><h4>.</h4></li>
+          <li class="paul-li nostyle-list" style="visibility: hidden;"><h4>.</h4></li>
           <li class="paul-li nostyle-list" style="visibility: hidden;"><h4>.</h4></li>
           <li class="paul-li nostyle-list" style="visibility: hidden;"><h4>.</h4></li>
           <li class="paul-li nostyle-list" style="visibility: hidden;"><h4>.</h4></li>
@@ -367,12 +371,14 @@
   <div class="container ">
     <article class="d-flex flex-wrap justify-content-between align-items-center py-3">
       <!-- <p class="col-md-4 mb-0  text-white">&copy; 2024  1</p> -->
+      <a href="/" class="nav-link   text-white">
         <img width="75px"  src="../static/logo/l1.webp" alt="">
+      </a>
   
       <ul class="nav col text-white justify-content-end">
         <!-- <li class="nav-item r-5"><a href="#" class="nav-link px-2  text-white">About us</a></li>
         <li class="nav-item r-5"><a href="#" class="nav-link px-2  text-white">Careers</a></li> -->
-        <li class="nav-item r-5"><a href="#" class="nav-link px-2  text-white">Investors</a></li>
+        <li class="nav-item r-5"><a href="/investors" class="nav-link px-2  text-white">Investors</a></li>
         
       </ul>
     </article>
@@ -386,9 +392,9 @@
       </a>
   
       <ul class="nav col-md-12 justify-content-end">
-        <li class=" "><a href="#" class="nav-link   text-white">Terms</a></li>
+        <!-- <li class=" "><a href="#" class="nav-link   text-white">Terms</a></li> -->
         <!-- <li class="nav-item"><a href="#" class="nav-link px-2  text-white">|</a></li> -->
-        <li class=""><a href="#" class="nav-link   text-white">Privacy</a></li>
+        <!-- <li class=""><a href="#" class="nav-link   text-white">Privacy</a></li> -->
         <p style="opacity: .4"> Any opinions or views stated on this website are subject to change without notice for any reason, and Equity Group reserves the right in its sole discretion, at any time and from time to time, to add, modify, or remove any of the information without any notice to you. Equity Group does not undertake, any obligation to update these webpages or otherwise notify you in the event that any views, opinions or facts stated on these webpages change or subsequently become inaccurate except to the extent required under any separate agreement between you and Equity Group.</p>
       </ul>
     </article>
