--- a/public/about/index.html
+++ b/public/about/index.html
@@ -298,12 +298,15 @@
   <div class="container ">
     <article class="d-flex flex-wrap justify-content-between align-items-center py-3">
       <!-- <p class="col-md-4 mb-0  text-white">&copy; 2024  1</p> -->
+      <a href="/" class="nav-link   text-white">
         <img width="75px"  src="../static/logo/l1.webp" alt="">
+      </a>
   
       <ul class="nav col text-white justify-content-end">
         <!-- <li class="nav-item r-5"><a href="#" class="nav-link px-2  text-white">About us</a></li>
         <li class="nav-item r-5"><a href="#" class="nav-link px-2  text-white">Careers</a></li> -->
-        <li class="nav-item r-5"><a href="#" class="nav-link px-2  text-white">Investors</a></li>
+        <li class="nav-item r-5"><a href="/investors" class="nav-link px-2  text-white">Investors</a></li>
+
         
       </ul>
     </article>
