--- a/public/free-discovery-call/index.html
+++ b/public/free-discovery-call/index.html
@@ -316,12 +316,14 @@
   <div class="container ">
     <article class="d-flex flex-wrap justify-content-between align-items-center py-3">
       <!-- <p class="col-md-4 mb-0  text-white">&copy; 2024  1</p> -->
+      <a href="/" class="nav-link   text-white">
         <img width="75px"  src="../static/logo/l1.webp" alt="">
+      </a>
   
       <ul class="nav col text-white justify-content-end">
         <!-- <li class="nav-item r-5"><a href="#" class="nav-link px-2  text-white">About us</a></li>
         <li class="nav-item r-5"><a href="#" class="nav-link px-2  text-white">Careers</a></li> -->
-        <li class="nav-item r-5"><a href="#" class="nav-link px-2  text-white">Investors</a></li>
+        <li class="nav-item r-5"><a href="/investors" class="nav-link px-2  text-white">Investors</a></li>
         
       </ul>
     </article>
@@ -335,9 +337,9 @@
       </a>
   
       <ul class="nav col-md-12 justify-content-end">
-        <li class=" "><a href="#" class="nav-link   text-white">Terms</a></li>
+        <!-- <li class=" "><a href="#" class="nav-link   text-white">Terms</a></li> -->
         <!-- <li class="nav-item"><a href="#" class="nav-link px-2  text-white">|</a></li> -->
-        <li class=""><a href="#" class="nav-link   text-white">Privacy</a></li>
+        <!-- <li class=""><a href="#" class="nav-link   text-white">Privacy</a></li> -->
         <p style="opacity: .4"> Any opinions or views stated on this website are subject to change without notice for any reason, and Equity Group reserves the right in its sole discretion, at any time and from time to time, to add, modify, or remove any of the information without any notice to you. Equity Group does not undertake, any obligation to update these webpages or otherwise notify you in the event that any views, opinions or facts stated on these webpages change or subsequently become inaccurate except to the extent required under any separate agreement between you and Equity Group.</p>
       </ul>
     </article>
