--- a/public/about/index.html
+++ b/public/about/index.html
@@ -298,7 +298,7 @@
 
 
     <article class="d-flex flex-wrap justify-content-between align-items-center py-3">
-      <p class="col-md-4 mb-0 ">&copy; 2024 </p>
+      <p class="col-md-4 mb-0 ">&copy; 2024 Equity Group</p>
   
       <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
         <!-- <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"/></svg> -->
@@ -326,8 +326,6 @@
 
 <script type='text/javascript' src='https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js?ver=3.2.1'
         id='jquery-js'></script>
-
-
 
 <script src="../static/nav_script.js"></script>
 
