--- a/public/sitemanager/index.html
+++ b/public/sitemanager/index.html
@@ -402,7 +402,7 @@
 
 
     <article class="d-flex flex-wrap justify-content-between align-items-center py-3">
-      <p class="col-md-4 mb-0 ">&copy; 2024 </p>
+      <p class="col-md-4 mb-0 ">&copy; 2024 Equity Group </p>
   
       <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
         <!-- <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"/></svg> -->
