--- a/public/abtest/index.html
+++ b/public/abtest/index.html
@@ -343,7 +343,7 @@
 <!-- background-image: url('../static/img/woods/wood1.jpeg'); -->
 <footer class="container-full text-white" style="background-image: url('../static/img/woods/wood1.jpeg'); ">
   <div class="container ">
-    <article class="d-flex flex-wrap justify-content-between align-items-center py-2">
+    <article class="d-flex flex-wrap justify-content-between align-items-center py-3">
       <!-- <p class="col-md-4 mb-0  text-white">&copy; 2024  1</p> -->
       <a href="/" class="nav-link   text-white">
         <img width="75px"  src="../static/logo/l1.webp" alt="">
@@ -353,10 +353,7 @@
         <!-- <li class="nav-item r-5"><a href="#" class="nav-link px-2  text-white">About us</a></li>
         <li class="nav-item r-5"><a href="#" class="nav-link px-2  text-white">Careers</a></li> -->
 
-        <li class="nav-item r-5"><a href="/investors" class="nav-link px-2  text-white">Investors</a></li>
-
-        <li class="white-ghost-button nav-item r-5"><a href="/investors" class="nav-link px-2 text-white">Investors</a></li>
-        <li class="white-ghost-button nav-item r-5"><a href="/investors" class="nav-link  px-2">Investors</a></li>
+        <li class="white-ghost-button nav-item r-5"><a href="/investors" class="nav-link-2  px-2">Investors</a></li>
 
         
       </ul>
