--- a/public/sitemanager/index.html
+++ b/public/sitemanager/index.html
@@ -368,40 +368,43 @@
 
   
 
-<!-- background-image: url('../static/img/woods/wood1.jpeg'); -->
 <footer class="container-full text-white" style="background-image: url('../static/img/woods/wood1.jpeg'); ">
-  <div class="container ">
-    <article class="d-flex flex-wrap justify-content-between align-items-center py-3">
-      <!-- <p class="col-md-4 mb-0  text-white">&copy; 2024  1</p> -->
-      <a href="/" class="nav-link   text-white">
-        <img width="75px"  src="../static/logo/l1.webp" alt="">
-      </a>
-  
-      <ul class="nav col text-white justify-content-end">
-        <!-- <li class="nav-item r-5"><a href="about" class="nav-link px-2  text-white">About us</a></li>
-        <li class="nav-item r-5"><a href="careers" class="nav-link px-2  text-white">Careers</a></li> -->
-        <li class="nav-item r-5"><a href="/investors" class="nav-link px-2  text-white">Investors</a></li>
-        
-      </ul>
-    </article>
+      <div class="container ">
+        <article class="d-flex flex-wrap justify-content-between align-items-center py-3">
+          <a href="/" class="nav-link   text-white">
+            <img width="75px" src="../static/logo/l1.webp" alt="">
+          </a>
 
+          <ul class="nav col text-white justify-content-end">
+            <!-- <li class="nav-item r-5"><a href="#" class="nav-link px-2  text-white">About us</a></li>
+            <li class="nav-item r-5"><a href="#" class="nav-link px-2  text-white">Careers</a></li> -->
+            <li class="white-ghost-button nav-item r-5"><a href="/investors" class="nav-link-2  px-2">Investors</a></li>
+          </ul>
+        </article>
 
-    <article class="d-flex flex-wrap justify-content-between align-items-center py-3">
-      <p class="col-md-4 mb-0 ">&copy; 2024 Equity Group </p>
-  
-      <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-        <!-- <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"/></svg> -->
-      </a>
-  
-      <ul class="nav col-md-12 justify-content-end">
-        <!-- <li class=" "><a href="#" class="nav-link   text-white">Terms</a></li> -->
-        <!-- <li class="nav-item"><a href="#" class="nav-link px-2  text-white">|</a></li> -->
-        <!-- <li class=""><a href="#" class="nav-link   text-white">Privacy</a></li> -->
-        <p style="opacity: .4"> Any opinions or views stated on this website are subject to change without notice for any reason, and Equity Group reserves the right in its sole discretion, at any time and from time to time, to add, modify, or remove any of the information without any notice to you. Equity Group does not undertake, any obligation to update these webpages or otherwise notify you in the event that any views, opinions or facts stated on these webpages change or subsequently become inaccurate except to the extent required under any separate agreement between you and Equity Group.</p>
-      </ul>
-    </article>
-  </div>
-</footer>
+        <article class="d-flex flex-wrap justify-content-between align-items-center pt-3">
+          <p class="col-md-4 mb-0 ">&copy; 2024 Equity Group</p>
+
+          <ul class="nav col text-white justify-content-end">
+            <li>
+              <p class=" mb-0 align-items-end"> Terms | Privacy </p>
+            </li>
+          </ul>
+        </article>
+
+        <article class="d-flex flex-wrap justify-content-between align-items-end py-3">
+          <p class="col-md-2 mb-0 "></p>
+          <p style="font-size: 14px; opacity: .4; line-height: 18px; margin-top: 5px" class="col-md-8 mb-0 ">
+            Any opinions or views stated on this website are subject to change without notice for any reason, and Equity
+            Group reserves the right in its sole discretion, at any time and from time to time, to add, modify, or
+            remove any of the information without any notice to you. Equity Group does not undertake, any obligation to
+            update these webpages or otherwise notify you in the event that any views, opinions or facts stated on these
+            webpages change or subsequently become inaccurate except to the extent required under any separate agreement
+            between you and Equity Group.
+          </p>
+        </article>
+      </div>
+    </footer>
 
 
 </main>
