--- a/public/investors/index.html
+++ b/public/investors/index.html
@@ -131,7 +131,7 @@
                           <li  class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1142"><a
                                       href="../../join-us/index.html"><h2>Join Us</h2></a></li>
                           <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1045"><a
-                                  href="../join-us/openings/index.html"> <h2>Openings</h2></a></li>
+                                  href="../join-us"> <h2>Openings</h2></a></li>
                            
                           <li class="non-link menu-item menu-item-type-custom menu-item-object-custom menu-item-1125">
                               <a></a></li>
