--- a/public/deals/index.html
+++ b/public/deals/index.html
@@ -526,8 +526,8 @@ We want to grow quickly but not so quickly that we lose control of the managemen
       var ctx = document.getElementById('canvas').getContext('2d');
       window.myLine = new Chart(ctx, config);
 
-      var ctx2 = document.getElementById('canvas2').getContext('2d');
-      window.myLine = new Chart(ctx2, config2);
+      // var ctx2 = document.getElementById('canvas2').getContext('2d');
+      // window.myLine = new Chart(ctx2, config2);
 
   };
 </script>
