--- a/public/about/index.html
+++ b/public/about/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en" >
   
-<head>
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
@@ -10,12 +10,9 @@
     <link rel="icon" href="../static/logo/eqlogo.png" sizes="32x32" />
   <link rel="icon" href="../static/logo/eqlogo.png" sizes="192x192" />
   <link rel="apple-touch-icon" href="../static/logo/eqlogo.png" />
-    <title>About | Equity Group </title>
-
+    <title> About  | Equity Group </title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
-    
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-
     <link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet">
     
   
@@ -38,6 +35,9 @@
 
 
 <body>   
+
+ 
+
  
   <header class="header-fixed">
     <div class="grid-container">
@@ -156,12 +156,11 @@
            <!-- loader start -->
     <div class="preloader">
       <div class="spinner">
-          <div class="loader-logo"><img  src="../static/static/logo/l1.webp">
+          <div class="loader-logo"><img  src="../static/logo/l1.webp">
           </div>
       </div>
   </div>
   <!-- loader end -->
-  
 
 <main>
 
