--- a/public/bi6/index.html
+++ b/public/bi6/index.html
@@ -23,7 +23,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js"></script>
    
 
-<style>
+<!-- <style>
   @font-face {
     font-family: eqsans;
     src: url(../themes/fonts/Nunito/Nunito-Regular.ttf);
@@ -31,7 +31,7 @@
   h1, h2, h3, h4, p, div, li, a  {
     font-family: eqsans;
   }
-</style>
+</style> -->
 
     
     <!-- Custom styles for this template -->
