--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
     crossorigin="anonymous" />
   <!-- Fonts end -->
 
-  <style>
+  <!-- <style>
     @font-face {
       font-family: eqsans;
       src: url(themes/fonts/Nunito/Nunito-Regular.ttf);
@@ -50,7 +50,7 @@
     a {
       font-family: eqsans;
     }
-  </style>
+  </style> -->
 
   <!-- <link rel='stylesheet' id='wp-block-library-css' href='static-ca/ca-one.css' type='text/css' media='all' /> -->
   <link rel="stylesheet" href="static-ca/iterations.css" />
