--- a/public/pmanager/index.html
+++ b/public/pmanager/index.html
@@ -10,14 +10,12 @@
     <link rel="icon" href="../static/logo/eqlogo.png" sizes="32x32" />
   <link rel="icon" href="../static/logo/eqlogo.png" sizes="192x192" />
   <link rel="apple-touch-icon" href="../static/logo/eqlogo.png" />
-    <title>Project Manager | Equity Group </title>
-
+    <title> Project Manager | Equity Group </title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
-    
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-
     <link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet">
     
+  
 
 <style>
   @font-face {
@@ -40,7 +38,7 @@
 
  
 
-
+ 
   <header class="header-fixed">
     <div class="grid-container">
       <div class="nav-menu hide-for-large">
@@ -158,7 +156,7 @@
            <!-- loader start -->
     <div class="preloader">
       <div class="spinner">
-          <div class="loader-logo"><img  src="../static/static/logo/l1.webp">
+          <div class="loader-logo"><img  src="../static/logo/l1.webp">
           </div>
       </div>
   </div>
