--- a/public/interns/index.html
+++ b/public/interns/index.html
@@ -158,7 +158,7 @@
            <!-- loader start -->
     <div class="preloader">
       <div class="spinner">
-          <div class="loader-logo"><img  src="../static/static/logo/l1.webp">
+          <div class="loader-logo"><img  src="../static/logo/l1.webp">
           </div>
       </div>
   </div>
