--- a/public/bi6/index.html
+++ b/public/bi6/index.html
@@ -202,7 +202,7 @@
       <!-- <p class="p-text"> To create a roll up by acquiring construction companies & build hundreds of properties each year.</p> -->
       <p class="p-text">
           To create a roll-up in the construction industry. 
-        <br/><br/> We will start by acquiring home remodeling firms and then expand by adding synergistic acquisitions to increase growth, synergies, and profitability in the single-family space.  
+        <br/><br/> We will start by acquiring home remodeling firms and then expand by adding synergistic acquisitions in the single-family space.  
       </p>
       
       <p class="trail"><span class="hr mt-4"></span>INFORMATION</p>
