--- a/public/deals/index.html
+++ b/public/deals/index.html
@@ -224,8 +224,9 @@
 <br/><br/>
 6. When will the company be formed? Where will be the headquarters?
 <br/>
-The company will be formed at the time of the first acquisition. <br/> We currently use the name equity group, which may be modified based on availability. The decision regarding the headquarters will be based on the recommendation from the law firm.
-<br/><br/>
+The company will be formed at the time of the first acquisition. <br/> The decision regarding the headquarters will be based on the recommendation from the law firm.
+We currently use the name equity group, which may be modified based on availability.
+ <br/><br/>
      
 7. What are you waiting for?<br/>
 We are currently finishing assembling the board, and then we'll be all set to acquire the first deal.        
