--- a/public/gplan/index.html
+++ b/public/gplan/index.html
@@ -178,7 +178,7 @@
     <div class="py-5">
       <p data-aos="fade-in" data-aos-delay="200" class="trailw aos-init aos-animate"><span class="hr"></span>
         Lets work together</p>
-      <h1 class="display-5 text-white">Consolidation Plan </h1>
+      <h1 class="display-5 text-white">Grand Plan </h1>
       
     </div>
   </div>
