--- a/public/grand/index.html
+++ b/public/grand/index.html
@@ -205,7 +205,16 @@
         
           <li>
           <p class=" mb-0 align-items-end"> We will start acquiring companies that have a revenue of 4-8 million, and then prioritize acquiring the best companies with a revenue of 10 million or more, similar to the PE firms.   
+          </p>
+        </li>
 
+        <li>
+          <p class=" mb-0 align-items-end"> I do believe this is very possible specially when you have employees ( call center ) workign on finding new acquisitions.   
+          </p>
+        </li>
+
+        <li>
+          <p class=" mb-0 align-items-end"> We may have seperate boards for all.   
           </p>
         </li>
       </ul>
