minor to check if git url is working fine

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -196,10 +196,10 @@
       <br/>
       <p class="p-text"> We help Americans navigate the challenges facing building their beautiful home.</p>
 
-      <h2 class="fw-normal lh-1 py-3" data-aos="fade-right"  data-aos-delay="50"data-aos-duration="1000"data-aos-easing="ease-in-out" > 200+ years </h2>
+      <h2 class="fw-normal lh-1 py-3" > 200+ years </h2>
       <p class="p-text">of experience in Business & M&A. </p>
 
-      <h2 class="featurette-heading fw-normal lh-1 py-3" data-aos="fade-right"  data-aos-delay="50"data-aos-duration="1000"data-aos-easing="ease-in-out" > 100+ years </h2>
+      <h2 class="featurette-heading fw-normal lh-1 py-3" > 100+ years </h2>
       <p class="p-text">of experience in management, finance and legal expertise in the industry. </p>
 
       <h2 class="featurette-heading fw-normal lh-1 py-3"  > Done 1000s </h2>
