--- a/public/bi6/index.html
+++ b/public/bi6/index.html
@@ -216,7 +216,7 @@
       <li class="p-text ">
         Please find the answers to frequently asked questions on this link:  <a class="purpleColor"  href="/deals"> FAQ</a>
       </li>
-      <li class="p-text">Board members will receive equity, annual compensation, and yearly bonus. To reduce taxes, the company can pay board members bonuses/salaries as an expense.</li>
+      <li class="p-text">Board members will receive equity, annual compensation, and yearly bonus. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; To reduce taxes, the company can pay board members bonuses/salaries as an expense.</li>
       <li class="p-text">Current :   <a class="purpleColor" href="/deals"> Deals</a> </li>
       <li class="p-text">Additional details about the board member position will be shared during the phone call. <a class="purpleColor" href="https://calendly.com/eqgpi/c" target="_blank"> Schedule the call here
       </a></li>
@@ -243,7 +243,7 @@
   <div class="row py-5">
   <article class="col-md-6" style="margin-bottom:40px">
     <p class="trail"><span class="hr"></span>Growth Trajectory</p>
-    <p class="p-text"> We plan to double the number of home-building projects each year through internal expansion and acquisitions.</p>
+    <p class="p-text"> Acquistions Growth plan</p>
   </article>
 
   <article class="col-md-6">
@@ -477,10 +477,10 @@
       data: {
           labels: ['Start', '1st year', '2nd year', '3rd year', '4rth year', '5th year', '6th year'],
           datasets: [{
-              label: 'Construction projects (multi fams) per Year',
+              label: 'Acquisitions per Year',
               backgroundColor: window.chartColors.blue,
               borderColor: window.chartColors.blue,
-              data: [4, 16, 32, 64, 128, 256],
+              data: [2, 4, 5, 6, 8],
               fill: false,
           }]
       },
@@ -492,7 +492,7 @@
                   type: 'linear',
                   position: 'right',
                   ticks: {
-                      max: 300,
+                      max: 10,
                       min: 0
                   }
               }]
