--- a/public/board/index.html
+++ b/public/board/index.html
@@ -8,7 +8,7 @@
   <link rel="icon" href="../static/logo/eqlogo.png" sizes="32x32" />
   <link rel="icon" href="../static/logo/eqlogo.png" sizes="192x192" />
   <link rel="apple-touch-icon" href="../static/logo/eqlogo.png" />
-    <title>Pauln | Equity Group </title>
+    <title>Board | Equity Group </title>
 
     <!-- <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/heroes/"> -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
@@ -196,7 +196,7 @@
                       data-src="../static/img/profile-images/paulF.jpg" />
 
       </div>
-    </div>
+    </div>  
     <div class="col-md-9" data-aos="fade-left" data-aos-delay="50"data-aos-duration="1000" style="margin-bottom: 500px;">
       <div class="h-100 p-5 rounded-3">
         <h2 class="display-8" >Former Managing Director, The Bank Of New York Mellon (“BNY”) ( 2007 - 2019)</h2>
