added google analytics

--- a/public/carousel_home/index.html
+++ b/public/carousel_home/index.html
@@ -99,7 +99,17 @@
     
     <!-- Custom styles for this template -->
     <link href="carousel.css" rel="stylesheet">
-  </head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-C1TE5PEN8F"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-C1TE5PEN8F');
+</script>
+</head>
+
   <body>
     <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
       <symbol id="check2" viewBox="0 0 16 16">
