--- a/public/abtest/index.html
+++ b/public/abtest/index.html
@@ -105,7 +105,17 @@
   <!-- Custom styles for this template -->
   <link rel="stylesheet" href="../static/nav_style.css">
   <link rel='stylesheet' href='../static/old-Nav.css' type='text/css' media='all' />
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-C1TE5PEN8F"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-C1TE5PEN8F');
+</script>
 </head>
+
 
 
 <body>
@@ -274,7 +284,7 @@
 
           <p class="trail"><span class="hr"></span>Who we are</p>
           <br />
-          <p class="p-text"> We help Americans navigate the challenges facing building their beautiful home.</p>
+          <p class="p-text"> We help Americans navigate the challenges facing building their home.</p>
 
           <h2 class="fw-normal lh-1 py-3" data-aos="fade-right" data-aos-delay="50" data-aos-duration="1000"
             data-aos-easing="ease-in-out"> 200+ years </h2>
