--- a/public/board/index.html
+++ b/public/board/index.html
@@ -32,7 +32,17 @@
   <link rel="stylesheet" href="../static/nav_style.css"> 
   <link rel='stylesheet' href='../static/old-Nav.css' type='text/css' media='all' />    
 
-  </head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-C1TE5PEN8F"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-C1TE5PEN8F');
+</script>
+</head>
+
 
 
 <body>   
