--- a/public/interns/index.html
+++ b/public/interns/index.html
@@ -34,7 +34,17 @@
   <!-- Custom styles for this template -->
   <link rel="stylesheet" href="../static/nav_style.css"> 
   <link rel='stylesheet' href='../static/old-Nav.css' type='text/css' media='all' />    
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-C1TE5PEN8F"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-C1TE5PEN8F');
+</script>
 </head>
+
 
 
 <body>   
